<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/learn"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/enquiries"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#EEEEEE"
            android:orientation="vertical">


            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/school_location"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/school_email"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/school_phone"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="7.5dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/created_by"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#EEEEEE"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/created_by_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/created_names"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />


            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="7.5dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>